feat: introduce optimized deployment configurations and validation enhancements
- Added a new document for optimized deployment configurations, detailing cost-effective resource allocations and automatic scaling strategies for Next.js and Flowise applications.
- Introduced a validation functions library to ensure deployment manifests are correctly configured, enhancing the reliability of the deployment process.
- Updated existing manifest files to reflect cost-optimized configurations with clear upgrade paths for resources.
- Enhanced the auto-deploy script to include manifest validation, ensuring that all configurations are production-ready before deployment.
- Created a comprehensive test suite for manifest validation, ensuring robust and reliable configurations.

This commit significantly improves deployment clarity, cost management, and validation processes, aligning with recent efforts to enhance the overall deployment experience.

--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -79,6 +79,14 @@ AAI_DEFAULT_OPENAI_API_KEY=
 # DATABASE_HOST=
 # DATABASE_USER=
 # DATABASE_PASSWORD=
+#
+# # Redis Configuration (Auto-scaling ElastiCache)
+# # ==================================================
+# # Redis URLs are automatically populated from the auto-scaling Redis cluster
+# # Features: Automatic failover, read replicas, horizontal scaling capability
+# # AAI_DEFAULT_REDIS_URL: Auto-populated for AAI features
+# # REDIS_URL: Auto-populated for Flowise core functionality
+# # Both point to the same auto-scaling cluster
 
 # # ==================================================
 # # AAI POSTGRESQL CONFIGURATION
