--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -68,20 +68,38 @@ variables: # Pass environment variables as key value pairs.
 
 # Environment-specific overrides
 environments:
-    # Standalone: Separate account deployment (independent accounts)
+    # Cost-optimized configuration with auto-scaling
     staging:
-        cpu: 1024 # Number of CPU units for the task
-        memory: 2048 # Amount of memory in MiB used by the task
-        count: 1 # Number of tasks that should be running in your service
+        cpu: 256
+        # Minimum required for initial deployment
+        # Upgrade path: 512 → 1024 → 2048 → 4096
+        memory: 512
+        # Minimum required for initial deployment
+        # Upgrade path: 1024 → 2048 → 4096 → 8192
+        count:
+            range: 1-10
+            # Can handle traffic spikes automatically
+            # Set AWS billing alerts at $100/month for safety
+            cpu_percentage: 85
+            memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
                 - web.${CLIENT_DOMAIN}
                 - ${CLIENT_DOMAIN}
     prod:
-        cpu: 2048 # Number of CPU units for the task
-        memory: 4096 # Amount of memory in MiB used by the task
-        count: 1 # Number of tasks that should be running in your service
+        cpu: 256
+        # Minimum required for initial deployment (same as staging)
+        # Upgrade path: 512 → 1024 → 2048 → 4096
+        memory: 512
+        # Minimum required for initial deployment (same as staging)
+        # Upgrade path: 1024 → 2048 → 4096 → 8192
+        count:
+            range: 1-20
+            # Can handle significant growth automatically
+            # Set AWS billing alerts at $200/month for safety
+            cpu_percentage: 85
+            memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
