fix: update manifest.yml files for enhanced resource configurations
- Increased CPU and memory settings for both staging and production environments in copilot/flowise/manifest.yml and copilot/web/manifest.yml to improve performance and scalability.
- Adjusted upgrade paths in comments to reflect the new configurations, ensuring clarity for future scaling needs.
- These changes optimize resource allocation and enhance the overall deployment strategy for the application.

--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -70,12 +70,12 @@ variables: # Pass environment variables as key value pairs.
 environments:
     # Cost-optimized configuration with auto-scaling
     staging:
-        cpu: 256
+        cpu: 512
         # Minimum required for initial deployment
-        # Upgrade path: 512 → 1024 → 2048 → 4096 → 8192
-        memory: 512
+        # Upgrade path: 1024 → 2048 → 4096 → 8192
+        memory: 1024
         # Minimum required for initial deployment
-        # Upgrade path: 1024 → 2048 → 4096 → 8192 → 16384
+        # Upgrade path: 2048 → 4096 → 8192 → 16384
         count:
             range: 1-3
             # Can handle traffic spikes automatically
@@ -87,10 +87,10 @@ environments:
                 - web.${CLIENT_DOMAIN}
                 - ${CLIENT_DOMAIN}
     prod:
-        cpu: 256
+        cpu: 512
         # Minimum required for initial deployment
         # Upgrade path: 512 → 1024 → 2048 → 4096 → 8192 → 16384
-        memory: 512
+        memory: 1024
         # Minimum required for initial deployment
         # Upgrade path: 1024 → 2048 → 4096 → 8192 → 16384 → 32768
         count:
