--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -92,9 +92,9 @@ secrets:
 environments:
     # Cost-optimized configuration with auto-scaling
     staging:
-        cpu: 512
+        cpu: 1024
         # Upgrade path: 1024 → 2048 → 4096 → 8192
-        memory: 1024
+        memory: 2048
         # Upgrade path: 2048 → 4096 → 8192 → 16384
         count:
             range: 1-3
@@ -107,10 +107,10 @@ environments:
                 - flowise.${CLIENT_DOMAIN}
                 - api.${CLIENT_DOMAIN}
     prod:
-        cpu: 512
-        # Upgrade path: 1024 → 2048 → 4096 → 8192 → 16384
-        memory: 1024
-        # Upgrade path: 2048 → 4096 → 8192 → 16384 → 32768
+        cpu: 1024
+        # Upgrade path: 2048 → 4096 → 8192 → 16384
+        memory: 2048
+        # Upgrade path: 4096 → 8192 → 16384 → 32768
         count:
             range: 1-12
             # Can handle significant load automatically
