fix: update upgrade paths in manifest.yml files for clarity
- Adjusted upgrade paths in comments for both staging and production environments in copilot/flowise/manifest.yml and copilot/web/manifest.yml to reflect the correct CPU and memory scaling options.
- These changes enhance the clarity of resource scaling strategies and provide accurate guidance for future upgrades, ensuring better understanding for developers and maintainers.

--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -93,9 +93,9 @@ environments:
     # Cost-optimized configuration with auto-scaling
     staging:
         cpu: 1024
-        # Upgrade path: 1024 → 2048 → 4096 → 8192
+        # Upgrade path: 2048 → 4096 → 8192
         memory: 2048
-        # Upgrade path: 2048 → 4096 → 8192 → 16384
+        # Upgrade path: 4096 → 8192 → 16384
         count:
             range: 1-3
             # Can handle processing spikes automatically
