--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
         "seed-credentials:write": "pnpm secure-run \"node ./scripts/seed-credentials/seed-credentials.js --auto-detect\"",
         "export-auth0-users": "pnpm secure-run \"node ./scripts/export-auth0-users.js\"",
         "submodule:init": "git submodule update --init --recursive --force",
-        "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive"
+        "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive",
+        "precopilot": "BWS_SUPPRESS_ALL=true pnpm secure-run sh copilot/scripts/copilot-switch-app.sh && sleep 1",
+        "copilot": "BWS_SUPPRESS_ALL=true pnpm secure-run copilot",
+        "copilot:auto": "bash ./copilot/scripts/copilot-auto-deploy.sh"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
