--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -92,30 +92,30 @@ secrets:
 environments:
     # Cost-optimized configuration with auto-scaling
     staging:
-        cpu: 1024
-        # Upgrade path: 2048 → 4096 → 8192
-        memory: 2048
+        cpu: 2048
         # Upgrade path: 4096 → 8192 → 16384
-        count:
-            range: 1-3
-            # Can handle processing spikes automatically
-            cpu_percentage: 85
-            memory_percentage: 90
+        memory: 4096
+        # Upgrade path: 8192 → 16384 → 32768
+        # count:
+        #     range: 1-3
+        #     # Can handle processing spikes automatically
+        #     cpu_percentage: 85
+        #     memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
                 - flowise.${CLIENT_DOMAIN}
                 - api.${CLIENT_DOMAIN}
     prod:
-        cpu: 1024
-        # Upgrade path: 2048 → 4096 → 8192 → 16384
-        memory: 2048
-        # Upgrade path: 4096 → 8192 → 16384 → 32768
-        count:
-            range: 1-12
-            # Can handle significant load automatically
-            cpu_percentage: 85
-            memory_percentage: 90
+        cpu: 2048
+        # Upgrade path: 4096 → 8192 → 16384
+        memory: 4096
+        # Upgrade path: 8192 → 16384 → 32768
+        # count:
+        #     range: 1-12
+        #     # Can handle significant load automatically
+        #     cpu_percentage: 85
+        #     memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
