--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -77,27 +77,28 @@ environments:
         # Minimum required for initial deployment
         # Upgrade path: 2048 → 4096 → 8192 → 16384
         count:
-            range: 1-3
-            # Can handle traffic spikes automatically
-            cpu_percentage: 85
-            memory_percentage: 90
+            1
+            # range: 1-3
+            # # Can handle traffic spikes automatically
+            # cpu_percentage: 85
+            # memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
                 - web.${CLIENT_DOMAIN}
                 - ${CLIENT_DOMAIN}
     prod:
-        cpu: 512
+        cpu: 1024
         # Minimum required for initial deployment
-        # Upgrade path: 1024 → 2048 → 4096 → 8192 → 16384
-        memory: 1024
+        # Upgrade path: 2048 → 4096 → 8192 → 16384
+        memory: 2048
         # Minimum required for initial deployment
-        # Upgrade path: 2048 → 4096 → 8192 → 16384 → 32768
-        count:
-            range: 1-12
-            # Can handle significant growth automatically
-            cpu_percentage: 85
-            memory_percentage: 90
+        # Upgrade path: 4096 → 8192 → 16384 → 32768
+        count: 2
+        #     range: 1-12
+        #     # Can handle significant growth automatically
+        #     cpu_percentage: 85
+        #     memory_percentage: 90
         http:
             alias:
                 # Service aliases for standalone account strategy
