--- a/packages-answers/ui/package.json
+++ b/packages-answers/ui/package.json
@@ -55,6 +55,7 @@
         "handlebars": "^4.7.8",
         "jose": "^5.10.0",
         "js-cookie": "^3.0.5",
+        "jszip": "^3.10.1",
         "next": "^14.2.31",
         "next-auth": "^4.24.11",
         "react": "18.2.0",
