fix: update Langfuse configuration to use HOST instead of BASE_URL
### Summary of Changes
- Removed `LANGFUSE_BASEURL` from `.env.template`.
- Updated `render.yaml` to set `LANGFUSE_HOST` as non-sync.
- Changed references in `speechToText.ts` and `config.ts` to use `LANGFUSE_HOST` instead of `LANGFUSE_BASE_URL`.

### Impact
This change standardizes the environment variable usage for Langfuse configuration, improving consistency across the codebase.

--- a/render.yaml
+++ b/render.yaml
@@ -302,7 +302,7 @@ services:
           # Flowise Langfuse Tracing
           # =========================================
           - key: LANGFUSE_HOST
-            value: 'https://cloud.langfuse.com'
+            sync: false
           - key: LANGFUSE_PUBLIC_KEY
             sync: false
           - key: LANGFUSE_SECRET_KEY
