--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,7 @@
     ],
     "scripts": {
         "build": "tsc && gulp",
-        "dev": "tsc --watch",
+        "dev": "tsc-watch --noClear",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "clean": "rimraf dist",
         "nuke": "rimraf dist node_modules .turbo"
