chore: update axios and dotenv dependencies across the codebase to latest versions
- Upgraded `axios` from `1.8.2` to `^1.12.1` in multiple package.json files.
- Updated `dotenv` from `^16.6.1` to `^17.2.2` in various package.json files.
- Adjusted `dotenv-cli` version from `^8.0.0` to `^10.0.0` in relevant package.json files.
- Ensured consistency in dependency versions across the monorepo for improved stability and security.

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -91,7 +91,7 @@
         "@zilliz/milvus2-sdk-node": "^2.6.0",
         "apify-client": "^2.12.6",
         "assemblyai": "^4.14.2",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "cheerio": "^1.1.2",
         "chromadb": "^1.10.5",
         "cohere-ai": "^7.18.0",
@@ -102,7 +102,7 @@
         "crypto-js": "^4.2.0",
         "css-what": "^6.2.2",
         "d3-dsv": "^2.0.0",
-        "dotenv": "^16.6.1",
+        "dotenv": "^17.2.2",
         "epub2": "^3.0.2",
         "exa-js": "^1.8.27",
         "express": "^4.21.2",
