--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,10 +34,10 @@
         "@uiw/codemirror-theme-sublime": "^4.24.2",
         "@uiw/codemirror-theme-vscode": "^4.24.2",
         "@uiw/react-codemirror": "^4.24.2",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "clsx": "^1.2.1",
         "contentful": "^10.15.1",
-        "dotenv": "^16.6.1",
+        "dotenv": "^17.2.2",
         "flagsmith": "^4.1.4",
         "flowise-react-json-view": "^1.21.7",
         "formik": "^2.4.6",
