--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,7 @@
         "aai-embed": "workspace:*",
         "add": "^2.0.6",
         "aws-crt": "^1.27.3",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "chromadb": "^1.10.5",
         "cohere-ai": "^7.18.0",
         "cors": "^2.8.5",
@@ -77,7 +77,7 @@
         "@types/react-dom": "^18.3.7",
         "@types/uuid": "^9.0.8",
         "copy-webpack-plugin": "^11.0.0",
-        "dotenv": "^16.6.1",
+        "dotenv": "^17.2.2",
         "eslint": "7.32.0",
         "eslint-config-custom": "workspace:*",
         "file-loader": "^6.2.0",
