--- a/package.json
+++ b/package.json
@@ -78,11 +78,11 @@
         "@types/express": "^4.17.23",
         "@types/node-cron": "^3.0.11",
         "@typescript-eslint/typescript-estree": "^7.18.0",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "cursor-tools": "latest",
         "cypress": "^13.17.0",
-        "dotenv": "^16.6.1",
-        "dotenv-cli": "^8.0.0",
+        "dotenv": "^17.2.2",
+        "dotenv-cli": "^10.0.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^8.10.2",
         "eslint-config-react-app": "^7.0.1",
@@ -115,7 +115,7 @@
             "sqlite3"
         ],
         "overrides": {
-            "axios": "1.8.2",
+            "axios": "^1.12.1",
             "body-parser": "2.0.2",
             "braces": "3.0.3",
             "cookie": ">=0.7.0",
