--- a/packages-answers/ui/package.json
+++ b/packages-answers/ui/package.json
@@ -45,7 +45,7 @@
         "@next-auth/prisma-adapter": "^1.0.7",
         "@textea/json-viewer": "2.14.1",
         "aai-embed-react": "~1.0.8",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "clsx": "^1.2.1",
         "cors": "^2.8.5",
         "encoding": "^0.1.13",
