--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -84,7 +84,7 @@
         "@opentelemetry/sdk-trace-base": "1.30.1",
         "@opentelemetry/semantic-conventions": "1.30.0",
         "async-mutex": "^0.4.1",
-        "axios": "1.8.2",
+        "axios": "^1.12.1",
         "bull-board": "^2.1.3",
         "bullmq": "^5.56.9",
         "connect-redis": "^8.1.0",
@@ -93,7 +93,7 @@
         "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
         "csv-parse": "^5.6.0",
-        "dotenv": "^16.6.1",
+        "dotenv": "^17.2.2",
         "express": "^4.21.2",
         "express-basic-auth": "^1.2.1",
         "express-oauth2-jwt-bearer": "^1.6.1",
@@ -165,7 +165,7 @@
         "concurrently": "^7.6.0",
         "cross-env": "^7.0.3",
         "cypress": "^13.17.0",
-        "dotenv-cli": "^8.0.0",
+        "dotenv-cli": "^10.0.0",
         "jest": "^29.7.0",
         "mocha": "^10.8.2",
         "nodemon": "^2.0.22",
