--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -44,7 +44,7 @@
         "build": "pnpm api-docs && docusaurus build && node scripts/fix-sitemap.js",
         "clear": "docusaurus clear",
         "deploy": "docusaurus deploy",
-        "dev": "docusaurus start --listen 4242",
+        "dev": "docusaurus start --port 4242",
         "docs": "docusaurus start --port 4242",
         "docusaurus": "docusaurus",
         "serve": "docusaurus serve",
