feat: enhance E2E testing infrastructure with improved helpers and configuration

--- a/apps/web/e2e/env.example
+++ b/apps/web/e2e/env.example
@@ -10,6 +10,11 @@ TEST_USER_ENTERPRISE_ADMIN_EMAIL=alpha+enterprise-admin@domain.ai
 TEST_USER_ENTERPRISE_BUILDER_EMAIL=alpha+enterprise-builder@domain.ai
 TEST_USER_ENTERPRISE_MEMBER_EMAIL=alpha+enterprise-member@domain.ai
 
+# OPTIONAL: Auth0 User IDs for each test user (auto-generated from email if not provided)
+# TEST_USER_ENTERPRISE_ADMIN_AUTH0_ID=auth0|your-admin-user-id
+# TEST_USER_ENTERPRISE_BUILDER_AUTH0_ID=auth0|your-builder-user-id
+# TEST_USER_ENTERPRISE_MEMBER_AUTH0_ID=auth0|your-member-user-id
+
 # Organization configuration for enterprise tests
 # Organization ID for Auth0 organization selection (use actual org ID from Auth0)
 # Example IDs from the HTML: org_unQ8OLmTNsxVTJCT (Local Dev), org_Ha7MW1NJ5oRRHwUa (Public)
@@ -19,6 +24,9 @@ TEST_ENTERPRISE_ORG_NAME=Local Dev
 
 # Base URL for testing (optional - defaults to http://localhost:3000)
 BASE_URL=http://localhost:3000
+
+# Enable test endpoints in development mode (required for E2E testing)
+ENABLE_E2E_ENDPOINTS=true
 
 # Auth0 configuration (these should match your development environment)
 AUTH0_SECRET=your-auth0-secret
@@ -43,6 +51,19 @@ ADMIN_API_KEY=your-admin-api-key-for-tests
 OPENAI_API_KEY=test-key-or-mock
 STRIPE_SECRET_KEY=sk_test_your-test-key
 STRIPE_PUBLISHABLE_KEY=pk_test_your-test-key
+
+# Test Credentials for Database Seeding
+# These are used when seeding test scenarios with specific credentials
+TEST_OPENAI_API_KEY=sk-test-openai-key-for-e2e
+TEST_EXASEARCH_API_KEY=test-exa-search-key-for-e2e
+TEST_JIRA_ACCESS_TOKEN=test-jira-token-for-e2e
+TEST_JIRA_USERNAME=jira-bot@example.com
+TEST_JIRA_HOST=https://example.atlassian.net
+TEST_CONFLUENCE_ACCESS_TOKEN=test-confluence-token-for-e2e
+TEST_CONFLUENCE_USERNAME=confluence-bot@example.com
+TEST_CONFLUENCE_BASE_URL=https://example.atlassian.net/wiki
+TEST_GITHUB_API_TOKEN=test-github-token-for-e2e
+TEST_SLACK_BOT_TOKEN=xoxb-test-slack-bot-token
 
 # Test configuration flags
 DISABLE_EXTERNAL_APIS=true
