chore: configure test database environment variables

--- a/.env.template
+++ b/.env.template
@@ -28,10 +28,19 @@ DISABLE_FLOWISE_TELEMETRY=true
 # ==================================================
 # DATABASE CONFIGURATION
 # ==================================================
+# IMPORTANT: These defaults are designed for test runners and CI/CD.
+# For development and production environments, OVERRIDE these values explicitly:
+#   - Development: Use your local database (e.g., DATABASE_NAME=flowise_dev)
+#   - Production: Use production credentials via environment variables or secrets manager
+#
+# Test mode (NODE_ENV=test) automatically adds test_ prefix to prevent accidental
+# production database access. See packages/server/src/DataSource.ts for implementation.
+# See docs/TEST_DATABASE_SECURITY.md for complete security details.
+#
 # Primary database settings
 DATABASE_TYPE=postgres
-DATABASE_NAME=your_database_name
-DATABASE_USER=your_database_user
+DATABASE_NAME=your_database_name        # ⚠️ Override for dev/prod (test mode auto-prefixes to test_*)
+DATABASE_USER=your_database_user        # ⚠️ Override for dev/prod (test mode auto-prefixes to test_*)
 DATABASE_PASSWORD=your_database_password
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
