--- a/apps/web/e2e/env.example
+++ b/apps/web/e2e/env.example
@@ -1,5 +1,20 @@
-# Test Environment Variables for Playwright E2E Tests
-# Copy this file to .env.test in the project root (apps/web) and fill in your test user credentials
+# ============================================================
+# E2E TEST CONFIGURATION
+# ============================================================
+# This file contains test-specific configuration.
+# Values here should NEVER be used in development or production.
+#
+# Test Database Security:
+#   - NODE_ENV=test triggers automatic test_ prefix enforcement
+#   - See packages/server/src/DataSource.ts::ensureTestPrefix()
+#   - See docs/TEST_DATABASE_SECURITY.md for security details
+#
+# Usage:
+#   1. Copy this file to .env.test in apps/web directory
+#   2. Fill in your test user credentials
+#   3. Ensure backend server runs with NODE_ENV=test and test database credentials
+#
+# ============================================================
 
 # Shared test user password (used by all test users)
 TEST_USER_PASSWORD=your-secure-test-password
@@ -41,8 +56,17 @@ AUTH0_MANAGEMENT_CLIENT_ID=your-mgmt-api-client-id
 AUTH0_MANAGEMENT_CLIENT_SECRET=your-mgmt-api-client-secret
 AUTH0_MANAGEMENT_AUDIENCE=https://your-domain.auth0.com/api/v2/
 
-# Database Configuration
-DATABASE_URL=your-test-database-url
+# Database Configuration (Test Mode)
+# IMPORTANT: These are TEST DEFAULTS - automatically prefixed with test_ when NODE_ENV=test
+# The DataSource implementation ensures safe database isolation during testing
+NODE_ENV=test
+DATABASE_TYPE=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=test_flowise_e2e    # Auto-prefixed by DataSource when NODE_ENV=test
+DATABASE_USER=test_user            # Auto-prefixed by DataSource when NODE_ENV=test
+DATABASE_PASSWORD=test_password
+DATABASE_URL=postgresql://test_user:test_password@localhost:5432/test_flowise_e2e
 
 # Admin API Key (for test user management)
 ADMIN_API_KEY=your-admin-api-key-for-tests
