--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
             - '5432:5432'
         volumes:
             - postgres_data:/var/lib/postgresql/data/
+            - ./docker/postgres-init:/docker-entrypoint-initdb.d
         environment:
             POSTGRES_PORT: 5432
             POSTGRES_USER: example_user
