chore: update test database configuration and migration scripts

--- a/apps/web/e2e/env.example
+++ b/apps/web/e2e/env.example
@@ -63,10 +63,10 @@ NODE_ENV=test
 DATABASE_TYPE=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME=test_flowise_e2e    # Auto-prefixed by DataSource when NODE_ENV=test
-DATABASE_USER=test_user            # Auto-prefixed by DataSource when NODE_ENV=test
-DATABASE_PASSWORD=test_password
-DATABASE_URL=postgresql://test_user:test_password@localhost:5432/test_flowise_e2e
+DATABASE_NAME=test_flowise         # Auto-prefixed by DataSource when NODE_ENV=test
+DATABASE_USER=test_example_user    # Auto-prefixed by DataSource when NODE_ENV=test
+DATABASE_PASSWORD=example_password
+DATABASE_URL=postgresql://test_example_user:example_password@localhost:5432/test_flowise
 
 # Admin API Key (for test user management)
 ADMIN_API_KEY=your-admin-api-key-for-tests
