--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,7 +76,7 @@
     },
     "scripts": {
         "not:dev": "vite",
-        "start": "vite",
+        "not:start": "vite",
         "not:build": "vite build",
         "clean": "rimraf build",
         "nuke": "rimraf build node_modules .turbo"
