--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,6 +23,7 @@
         "docusaurus-theme-openapi-docs": "^4.5.1",
         "dotenv": "^16.6.1",
         "js-yaml": "^4.1.0",
+        "lucide-react": "^0.545.0",
         "prism-react-renderer": "^2.4.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
